Fixed no scroll issue for data visualizer on mobile

--- a/src/styles/_mobileworkspace.scss
+++ b/src/styles/_mobileworkspace.scss
@@ -44,15 +44,6 @@ $shadow-light: rgba(0, 0, 0, 0.2);
       }
     }
   }
-
-  .sa-list-visualizer {
-    .kineticjs-content {
-      canvas {
-        // to be changed later
-        width: 100% !important;
-      }
-    }
-  }
 }
 
 .mobile-unselected-panel {
